[package]
name = "golem"
version = "0.1.5"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
description = "A (mostly) safe library for graphics programming"
categories = ["game-development", "web-programming", "graphics"]
keywords = ["gl", "opengl", "webgl", "graphics",]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ryanisaacg/golem"
readme = "README.md"

[features]
wasm-stdweb = ["glow/stdweb"]
wasm-web-sys = ["web-sys", "glow/web-sys"]
std = []

[dependencies]
bytemuck = "1"
glow = { git = "https://github.com/grovesNL/glow.git", default-features = false }
log = "0.4"

[dependencies.web-sys]
version = "0.3.41"
optional = true
features = [
    'HtmlCanvasElement',
    'HtmlImageElement',
    'ImageBitmap'
]

[dev-dependencies]
blinds = { version = "0.1.0", default-features = false, features = ["gl"] }
nalgebra-glm = "0.7.0"
